# plugin-placesmenu

./: CMakeLists.txt  ChangeLog  README.md  placesmenu.cpp  placesmenu.h  placesmenuconfiguration.cpp  placesmenuconfiguration.h  placesmenuconfiguration.ui  plugin-placesmenu.kdev4
.kdev4/: plugin-placesmenu.kdev4
cmake/: BuildPlugin.cmake
resources/: placesmenu.desktop.in
translations/: placesmenu.ts  placesmenu_pt_BR.desktop  placesmenu_pt_BR.ts  placesmenutr.pro
translations/lxqt-panel/plugin-placesmenu/: placesmenu.ts  placesmenu_pt_BR.ts
